crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.todo-hoisting-simple-var-declaration/error.txt
Found 1 error:

Todo: (BuildHIR::lowerStatement) Handle var kinds in VariableDeclaration

error.todo-hoisting-simple-var-declaration.ts:7:2
   5 |   }
   6 |   const result = addOne(2);
>  7 |   var a = 1;
     |   ^^^^^^^^^^ (BuildHIR::lowerStatement) Handle var kinds in VariableDeclaration
   8 |
   9 |   return result; // OK: returns NaN. The code is semantically wrong but technically correct
  10 | }
